C#/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XC_RectInRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_RectInRect(RECT* pRect1, RECT* pRect2);

        [DllImport("xcgui.dll", EntryPoint = "XC_CombineRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_CombineRect(RECT* pDest, RECT* pSrc1, RECT* pSrc2);

        [DllImport("xcgui.dll", EntryPoint = "XC_ShowLayoutFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_ShowLayoutFrame(bool bShow);

        [DllImport("xcgui.dll", EntryPoint = "XC_EnableDebugFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_EnableDebugFile(bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetLayoutFrameColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_SetLayoutFrameColor(int color);

        [DllImport("xcgui.dll", EntryPoint = "XC_EnableErrorMessageBox", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_EnableErrorMessageBox(bool bEnabel);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_LoadLayout(string pFileName, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadLayoutFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_LoadLayoutFromString(string pStringXML, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadResource", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_LoadResource(string pFileName, string pDir);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadResourceFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_LoadResourceFromString(string pStringXML, string pDir);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadTemplate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern template_info_i* XC_LoadTemplate(int nType, string pFileName);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadTemplateFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern template_info_i* XC_LoadTemplateFromString(int nType, string pStringXML);

        [DllImport("xcgui.dll", EntryPoint = "XC_TemplateDestroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_TemplateDestroy(template_info_i* pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetTextSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_GetTextSize(string pString, int length, int hFontX, SIZE* pOutSize);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_GetDefaultFont();

        [DllImport("xcgui.dll", EntryPoint = "XC_SetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_SetDefaultFont(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XC_InitFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_InitFont(LOGFONTW* pFont, string pName, int size, bool bBold, bool bItalic, bool bUnderline, bool bStrikeOut);

        [DllImport("xcgui.dll", EntryPoint = "XC_Malloc", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_Malloc(int size);

        [DllImport("xcgui.dll", EntryPoint = "XC_Free", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_Free(int p);

        [DllImport("xcgui.dll", EntryPoint = "_XC_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_SetType(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "_XC_AddType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_AddType(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "_XC_BindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_BindData(int hXCGUI, int data);

        [DllImport("xcgui.dll", EntryPoint = "_XC_GetBindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int _XC_GetBindData(int hXCGUI);

        [DllImport("xcgui.dll", EntryPoint = "XInitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XInitXCGUI(string pText);

        [DllImport("xcgui.dll", EntryPoint = "XRunXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XRunXCGUI();

        [DllImport("xcgui.dll", EntryPoint = "XExitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XExitXCGUI();

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBkInfoM_Create();

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBkInfoM_Destroy(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_SetBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBkInfoM_SetBkInfo(int hBkInfoM, string pText);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBkInfoM_AddBorder(int hBkInfoM, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBkInfoM_AddFill(int hBkInfoM, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBkInfoM_AddImage(int hBkInfoM, int nState, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBkInfoM_GetCount(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Clear", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBkInfoM_Clear(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Draw", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XBkInfoM_Draw(int hBkInfoM, int nState, int hDraw, RECT pRect);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_DrawEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XBkInfoM_DrawEx(int hBkInfoM, int nState, int hDraw, RECT pRect, int nStateFilter);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_Create(int x, int y, int cx, int cy, string pName, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_IsCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XBtn_IsCheck(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XBtn_SetCheck(int hEle, bool bCheck);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetState(int hEle, int nState);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetState(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetStateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetStateEx(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetStyle(int hEle, int nStyle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetStyle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetType(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetType(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetGroupID(int hEle, int nID);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetGroupID(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetBindEle(int hEle, int hBindEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetBindEle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetTextAlign(int hEle, int nFlags);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XBtn_GetTextAlign(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetIconAlign(int hEle, int align);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XBtn_SetOffset(int hEle, int x, int y);
